--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
   <H1>teszt</H1>
+  <div id="test">Test</div>
+  <script>
+    var id = document.getElementById("test")
+    id.innerHTML = "OSK"
+  </script>
 </body>
 </html>
