--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <div id="test">Test</div>
   <script>
     var id = document.getElementById("test")
-    id.innerHTML = "OSK"
+    id.innerHTML = "OKS"
   </script>
 </body>
 </html>
