--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
   <H1>teszt</H1>
   <div id="test">Test</div>
+  <a href="html/elektronika.html">ELEKTRONIKA</a>
   <script>
     var id = document.getElementById("test")
     id.innerHTML = "OKS"
